[package]
name = "identity"
version = "0.1.0"
authors = ["Master Union <masteruniondoo@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
common = { path = "../../common", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "common/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
